--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,6 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+okta.oauth2.issuer=https://dev-59149261.okta.com/oauth2/default
+okta.oauth2.audience=api://default
